--- a/index.html
+++ b/index.html
@@ -16,23 +16,50 @@
   </style>
 </head>
 <body>
-  How many team members can I invite?
-  You can invite up to 2 additional users on the Free plan. There is no limit on 
-  team members for the Premium plan.
+  
+  <img src="./images/illustration-box-desktop.svg">
+  <img src="./images/illustration-woman-online-desktop.svg">
+  
+  <div class="accordion-body">
+  <div class="accordion">
+    <h1>FAQ</h1>
+    
+    <div class="container">
+      <div class="question">How many team members can I invite?</div>
+      <img class="arrow" src="./images/icon-arrow-down.svg">
+      <div class="answer">You can invite up to 2 additional users on the Free plan. There is no limit on 
+        team members for the Premium plan.</div>
+    </div>
+    
+    <div class="container">
+      <div class="question">What is the maximum file upload size?</div>
+      <img class="arrow" src="./images/icon-arrow-down.svg">
+      <div class="answer">No more than 2GB. All files in your account must fit your allotted storage space.</div>
+    </div>
 
-  What is the maximum file upload size?
-  No more than 2GB. All files in your account must fit your allotted storage space.
+    <div class="container">
+      <div class="question">How do I reset my password?</div>
+      <img class="arrow" src="./images/icon-arrow-down.svg">
+      <div class="answer">Click “Forgot password” from the login page or “Change password” from your profile page.
+        A reset link will be emailed to you.</div>
+    </div>
 
-  How do I reset my password?
-  Click “Forgot password” from the login page or “Change password” from your profile page.
-  A reset link will be emailed to you.
+    <div class="container">
+      <div class="question">Can I cancel my subscription?</div>
+      <img class="arrow" src="./images/icon-arrow-down.svg">
+      <div class="answer">Yes! Send us a message and we’ll process your request no questions asked.</div>
+    </div>
 
-  Can I cancel my subscription?
-  Yes! Send us a message and we’ll process your request no questions asked.
+    <div class="container">
+      <div class="question">Do you provide additional support?</div>
+      <img class="arrow" src="./images/icon-arrow-down.svg">
+      <div class="answer">Chat and email support is available 24/7. Phone lines are open during normal business hours.</div>
+    </div>
 
-  Do you provide additional support?
-  Chat and email support is available 24/7. Phone lines are open during normal business hours.
-
+  </div>
+  </div>
+  
+  
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Your Name Here</a>.
