--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
   </div>
   </div>
   
+  <script src="app.js" type="text/javascript"></script>
   
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
