--- a/index.html
+++ b/index.html
@@ -14,16 +14,18 @@
 </head>
   
   <img src="./images/illustration-box-desktop.svg">
-  <img src="./images/illustration-woman-online-desktop.svg">
+  <section class="main">
+
+    <img src="./images/illustration-woman-online-desktop.svg">
   
-  <div class="accordion-body">
+  
   <div class="accordion">
     <h1>FAQ</h1>
     
     <div class="container">
       <div class="question">How many team members can I invite?
         <img class="arrow" src="./images/icon-arrow-down.svg">
-        </div>
+      </div>
       <div class="answer">You can invite up to 2 additional users on the Free plan. There is no limit on 
         team members for the Premium plan.</div>
     </div>
@@ -58,7 +60,8 @@
     </div>
 
   </div>
-  </div>
+
+  </section>
   
   <script src="app.js" type="text/javascript"></script>
   
