--- a/index.html
+++ b/index.html
@@ -1,73 +1,113 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+  <link rel="stylesheet" href="/styles/reset.css">
+  <link rel="stylesheet" href="/styles/style.css">
+  <script defer src="./app.js"></script>
   <title>Frontend Mentor | FAQ Accordion Card</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <link rel="stylesheet" href="style.css" />
- 
 </head>
-  
-  <img src="./images/illustration-box-desktop.svg">
-  <section class="main">
 
-    <img src="./images/illustration-woman-online-desktop.svg">
-  
-  
-  <div class="accordion">
-    <h1>FAQ</h1>
-    
-    <div class="container">
-      <div class="question">How many team members can I invite?
-        <img class="arrow" src="./images/icon-arrow-down.svg">
-      </div>
-      <div class="answer">You can invite up to 2 additional users on the Free plan. There is no limit on 
-        team members for the Premium plan.</div>
-    </div>
-    
-    <div class="container">
-      <div class="question">What is the maximum file upload size?
-        <img class="arrow" src="./images/icon-arrow-down.svg">
-      </div>
-      <div class="answer">No more than 2GB. All files in your account must fit your allotted storage space.</div>
-    </div>
+<body>
 
-    <div class="container">
-      <div class="question">How do I reset my password?
-        <img class="arrow" src="./images/icon-arrow-down.svg">
-      </div>
-      <div class="answer">Click “Forgot password” from the login page or “Change password” from your profile page.
-        A reset link will be emailed to you.</div>
-    </div>
+  <!-- FAQ's could be a section in a website. Let's use <section> for it in that
+ case. -->
+  <section class="faq">
 
-    <div class="container">
-      <div class="question">Can I cancel my subscription?
-        <img class="arrow" src="./images/icon-arrow-down.svg">
+    <section class="faq__img-container">
+      <div class="main-images-container">
+        <picture class="faq__woman-illustration">
+          <source media="(max-width: 1109px )" srcset="/images/illustration-woman-online-mobile.svg">
+          <source media="(min-width: 1110px )" srcset="/images/illustration-woman-online-desktop.svg">
+          <img src="/images/illustration-woman-online-desktop.svg"
+            alt="illustration of a woman standing in front of a screen">
+        </picture>
+        <picture class="faq__shadow-illustration">
+          <source media="(max-width: 1109px )" srcset="./images/bg-pattern-mobile.svg">
+          <source media="(min-width: 1110px )" srcset="./images/bg-pattern-desktop.svg">
+          <img src="./images/bg-pattern-desktop.svg"
+            alt="box shadow">
+        </picture>
       </div>
-      <div class="answer">Yes! Send us a message and we’ll process your request no questions asked.</div>
-    </div>
 
-    <div class="container">
-      <div class="question">Do you provide additional support?
-        <img class="arrow" src="./images/icon-arrow-down.svg">
-      </div>
-      <div class="answer">Chat and email support is available 24/7. Phone lines are open during normal business hours.</div>
-    </div>
+      <img src="./images/illustration-box-desktop.svg" alt="" class="faq__box-illustration">
 
-  </div>
+    </section>
+
+    <section class="faq__text-container">
+      <h2 class="faq__heading">FAQ</h2>
+
+      <ul class="faq__faqs-list">
+        <li class="faq__faq-item">
+          <section class="faq-item__summary">
+            <p class="faq-item__description">How many team members can I
+              invite?</p>
+            <div class="faq-item__arrow-container">
+              <img src="/images/icon-arrow-down.svg" alt="arrow" class="faq-item__arrow-icon">
+            </div>
+          </section>
+          <section class="faq-item__detail">
+            You can invite up to 2 additional users on the Free plan. There is no limit on
+            team members for the Premium plan.
+          </section>
+        </li>
+
+        <li class="faq__faq-item">
+          <section class="faq-item__summary">
+            <p class="faq-item__description">What is the maximum file upload size?</p>
+            <div class="faq-item__arrow-container">
+              <img src="/images/icon-arrow-down.svg" alt="arrow" class="faq-item__arrow-icon">
+            </div>
+          </section>
+          <section class="faq-item__detail">
+            No more than 2GB. All files in your account must fit your allotted storage space.
+          </section>
+        </li>
+
+        <li class="faq__faq-item">
+          <section class="faq-item__summary">
+            <p class="faq-item__description">How do I reset my password?</p>
+            <div class="faq-item__arrow-container">
+              <img src="/images/icon-arrow-down.svg" alt="arrow" class="faq-item__arrow-icon">
+            </div>
+          </section>
+          <section class="faq-item__detail">
+            Click “Forgot password” from the login page or “Change password” from your profile page.
+            A reset link will be emailed to you.
+          </section>
+        </li>
+        <li class="faq__faq-item">
+          <section class="faq-item__summary">
+            <p class="faq-item__description">Can I cancel my subscription?</p>
+            <div class="faq-item__arrow-container">
+              <img src="/images/icon-arrow-down.svg" alt="arrow" class="faq-item__arrow-icon">
+            </div>
+          </section>
+          <section class="faq-item__detail">
+            Yes! Send us a message and we’ll process your request no questions asked.
+          </section>
+        </li>
+        <li class="faq__faq-item">
+          <section class="faq-item__summary">
+            <p class="faq-item__description">Do you provide additional support?</p>
+            <div class="faq-item__arrow-container">
+              <img src="/images/icon-arrow-down.svg" alt="arrow" class="faq-item__arrow-icon">
+            </div>
+          </section>
+          <section class="faq-item__detail">
+            Chat and email support is available 24/7. Phone lines are open during normal business hours.
+          </section>
+        </li>
+
+      </ul>
+
+
+    </section>
 
   </section>
-  
-  <script src="app.js" type="text/javascript"></script>
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
 </body>
+
 </html>
