--- a/index.html
+++ b/index.html
@@ -42,62 +42,62 @@
 
       <ul class="faq__faqs-list">
         <li class="faq__faq-item">
-          <section class="faq-item__summary">
-            <p class="faq-item__description">How many team members can I
+          <section class="faq-item_summary">
+            <p class="faq-item_question">How many team members can I
               invite?</p>
-            <div class="faq-item__arrow-container">
+            <div class="faq-item_arrow">
               <img src="/images/icon-arrow-down.svg" alt="arrow" class="faq-item__arrow-icon">
             </div>
           </section>
-          <section class="faq-item__detail">
+          <section class="faq-item_answer">
             You can invite up to 2 additional users on the Free plan. There is no limit on
             team members for the Premium plan.
           </section>
         </li>
 
         <li class="faq__faq-item">
-          <section class="faq-item__summary">
-            <p class="faq-item__description">What is the maximum file upload size?</p>
-            <div class="faq-item__arrow-container">
+          <section class="faq-item_summary">
+            <p class="faq-item_question">What is the maximum file upload size?</p>
+            <div class="faq-item_arrow">
               <img src="/images/icon-arrow-down.svg" alt="arrow" class="faq-item__arrow-icon">
             </div>
           </section>
-          <section class="faq-item__detail">
+          <section class="faq-item_answer">
             No more than 2GB. All files in your account must fit your allotted storage space.
           </section>
         </li>
 
         <li class="faq__faq-item">
-          <section class="faq-item__summary">
-            <p class="faq-item__description">How do I reset my password?</p>
-            <div class="faq-item__arrow-container">
+          <section class="faq-item_summary">
+            <p class="faq-item_question">How do I reset my password?</p>
+            <div class="faq-item_arrow">
               <img src="/images/icon-arrow-down.svg" alt="arrow" class="faq-item__arrow-icon">
             </div>
           </section>
-          <section class="faq-item__detail">
+          <section class="faq-item_answer">
             Click “Forgot password” from the login page or “Change password” from your profile page.
             A reset link will be emailed to you.
           </section>
         </li>
         <li class="faq__faq-item">
-          <section class="faq-item__summary">
-            <p class="faq-item__description">Can I cancel my subscription?</p>
-            <div class="faq-item__arrow-container">
+          <section class="faq-item_summary">
+            <p class="faq-item_question">Can I cancel my subscription?</p>
+            <div class="faq-item_arrow">
               <img src="/images/icon-arrow-down.svg" alt="arrow" class="faq-item__arrow-icon">
             </div>
           </section>
-          <section class="faq-item__detail">
+          <section class="faq-item_answer">
             Yes! Send us a message and we’ll process your request no questions asked.
           </section>
         </li>
         <li class="faq__faq-item">
-          <section class="faq-item__summary">
-            <p class="faq-item__description">Do you provide additional support?</p>
-            <div class="faq-item__arrow-container">
+          <section class="faq-item_summary">
+            <p class="faq-item_question">Do you provide additional support?</p>
+            <div class="faq-item_arrow">
               <img src="/images/icon-arrow-down.svg" alt="arrow" class="faq-item__arrow-icon">
             </div>
           </section>
-          <section class="faq-item__detail">
+          <section class="faq-item_answer">
             Chat and email support is available 24/7. Phone lines are open during normal business hours.
           </section>
         </li>
