--- a/index.html
+++ b/index.html
@@ -17,15 +17,15 @@
  case. -->
   <section class="faq">
 
-    <section class="faq__img-container">
+    <section class="faq_img-container">
       <div class="main-images-container">
-        <picture class="faq__woman-illustration">
+        <picture class="faq_woman-illustration">
           <source media="(max-width: 1109px )" srcset="/images/illustration-woman-online-mobile.svg">
           <source media="(min-width: 1110px )" srcset="/images/illustration-woman-online-desktop.svg">
           <img src="/images/illustration-woman-online-desktop.svg"
             alt="illustration of a woman standing in front of a screen">
         </picture>
-        <picture class="faq__shadow-illustration">
+        <picture class="faq_shadow-illustration">
           <source media="(max-width: 1109px )" srcset="./images/bg-pattern-mobile.svg">
           <source media="(min-width: 1110px )" srcset="./images/bg-pattern-desktop.svg">
           <img src="./images/bg-pattern-desktop.svg"
@@ -33,20 +33,20 @@
         </picture>
       </div>
 
-      <img src="./images/illustration-box-desktop.svg" alt="" class="faq__box-illustration">
+      <img src="./images/illustration-box-desktop.svg" alt="" class="faq_box-illustration">
 
     </section>
 
-    <section class="faq__text-container">
-      <h2 class="faq__heading">FAQ</h2>
+    <section class="faq_text-container">
+      <h2 class="faq_heading">FAQ</h2>
 
-      <ul class="faq__faqs-list">
-        <li class="faq__faq-item">
+      <ul class="faq_faqs-list">
+        <li class="faq_faq-item">
           <section class="faq-item_summary">
             <p class="faq-item_question">How many team members can I
               invite?</p>
             <div class="faq-item_arrow">
-              <img src="/images/icon-arrow-down.svg" alt="arrow" class="faq-item__arrow-icon">
+              <img src="/images/icon-arrow-down.svg" alt="arrow" class="faq-item_arrow-icon">
             </div>
           </section>
           <section class="faq-item_answer">
@@ -55,11 +55,11 @@
           </section>
         </li>
 
-        <li class="faq__faq-item">
+        <li class="faq_faq-item">
           <section class="faq-item_summary">
             <p class="faq-item_question">What is the maximum file upload size?</p>
             <div class="faq-item_arrow">
-              <img src="/images/icon-arrow-down.svg" alt="arrow" class="faq-item__arrow-icon">
+              <img src="/images/icon-arrow-down.svg" alt="arrow" class="faq-item_arrow-icon">
             </div>
           </section>
           <section class="faq-item_answer">
@@ -67,11 +67,11 @@
           </section>
         </li>
 
-        <li class="faq__faq-item">
+        <li class="faq_faq-item">
           <section class="faq-item_summary">
             <p class="faq-item_question">How do I reset my password?</p>
             <div class="faq-item_arrow">
-              <img src="/images/icon-arrow-down.svg" alt="arrow" class="faq-item__arrow-icon">
+              <img src="/images/icon-arrow-down.svg" alt="arrow" class="faq-item_arrow-icon">
             </div>
           </section>
           <section class="faq-item_answer">
@@ -79,22 +79,22 @@
             A reset link will be emailed to you.
           </section>
         </li>
-        <li class="faq__faq-item">
+        <li class="faq_faq-item">
           <section class="faq-item_summary">
             <p class="faq-item_question">Can I cancel my subscription?</p>
             <div class="faq-item_arrow">
-              <img src="/images/icon-arrow-down.svg" alt="arrow" class="faq-item__arrow-icon">
+              <img src="/images/icon-arrow-down.svg" alt="arrow" class="faq-item_arrow-icon">
             </div>
           </section>
           <section class="faq-item_answer">
             Yes! Send us a message and we’ll process your request no questions asked.
           </section>
         </li>
-        <li class="faq__faq-item">
+        <li class="faq_faq-item">
           <section class="faq-item_summary">
             <p class="faq-item_question">Do you provide additional support?</p>
             <div class="faq-item_arrow">
-              <img src="/images/icon-arrow-down.svg" alt="arrow" class="faq-item__arrow-icon">
+              <img src="/images/icon-arrow-down.svg" alt="arrow" class="faq-item_arrow-icon">
             </div>
           </section>
           <section class="faq-item_answer">
